2017-04-02  JMB  Release preparation and assorted bugfixes

    * Added the latest Italian translation updates.
    * Fixed a rather long-standing bug where the view editor failed to save
      which columns are to be included when first creating a new view.
    * Removed the top padding for dynamic-height text fields on Android to
      fully fix the cursor alignment problem.
    * Fixed the spacing on the popup menu for the column statistics dialog's
      column listing.
    * Updated the help file translation templates
    * Reverted a change in QQMenuHelper that broke compatibility with Qt 4.5
      (still needed for the Maemo releases)
    * Updated assorted Maemo packaging files for the upcoming 2.2 release

2017-03-30  JMB  Update UI translations, fix them on Android, new help theme

    Updated the UI translation files, and fixed a configuration bug which was
    preventing them from being used on Android.

    Also updated the help files to use a different Sphinx theme (from Read the
    Docs) which works better on small device screens.

2017-03-29  JMB  Add help action to Android, visual fixes

    Added a "Help" action to Android which points to the online help files
    in the appropriate language.

    Changed the default Android alternate row background color to one which
    is easier to distinguish, and removed some padding on dynamic-height
    text inputs which was causing the cursor to be mis-positioned.

2017-03-28  JMB  Fix image selector/editor on Android

    The image selection/editing dialog hadn't been properly tested on
    Android yet; made a couple of fixes to make it work correctly.

2017-03-27  JMB  More reliable column resizing

    At least on Android, setting the width of a column from the column
    statistics dialog triggered a cascade of events which could sometimes
    inadvertently change the widths of other columns also.  Disabled a signal
    hander while applying changes from the dialog to prevent this from
    happening.
